y2023ex05 rust wip

--- a/y2023/y2023ex04.ipynb
+++ b/y2023/y2023ex04.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -34,6 +20,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "cellView": "form",
+        "id": "M0SjGiF-imbZ"
+      },
+      "outputs": [],
       "source": [
         "#@title input\n",
         "_input=\"\"\"Card   1: 57 76 72 11  8 28 15 38 54 46 | 77 87 71 98 40  7 84 43 61 64  5 50 19 83 79 99 36 47  4 95 30 44 37 55 26\n",
@@ -244,16 +236,32 @@
         "Card 206: 56 21 34 13  1 17 99 11 76 60 | 36 24 83 31 50 19 82 32 61  9 98 71 79 39 97 37 29 13 27 10 52 22 41 40 59\n",
         "Card 207: 62  7 22 90 51 96 12 13 36 52 | 48 37 70 24 73 51 83  3  5 77 29 87 23 18 26 76 19 97 20 86 84 14 63 33 21\n",
         "Card 208: 40 42  5 91 29 59 70 49 23 94 | 82 81 30 61 64 65 19  9 67 75 92 16 26 52 73 43 55 35 17 93 39 90 74 53 51\"\"\""
-      ],
-      "metadata": {
-        "id": "M0SjGiF-imbZ",
-        "cellView": "form"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vWaCTT5h8dG",
+        "outputId": "bed8e4b5-9f3c-4dd7-916f-fc0dae179ce4"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: ([41, 48, 83, 86, 17], [83, 86, 6, 31, 17, 9, 48, 53]),\n",
+            " 2: ([13, 32, 20, 16, 61], [61, 30, 68, 82, 17, 32, 24, 19]),\n",
+            " 3: ([1, 21, 53, 59, 44], [69, 82, 63, 72, 16, 21, 14, 1]),\n",
+            " 4: ([41, 92, 73, 84, 69], [59, 84, 76, 51, 58, 5, 54, 83]),\n",
+            " 5: ([87, 83, 26, 28, 32], [88, 30, 70, 12, 93, 22, 82, 36]),\n",
+            " 6: ([31, 18, 13, 56, 72], [74, 77, 10, 23, 35, 67, 36, 11])}\n"
+          ]
+        }
+      ],
       "source": [
         "from pprint import pprint\n",
         "\n",
@@ -269,32 +277,28 @@
         "    return cards\n",
         "\n",
         "pprint(parser(readme_input))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5vWaCTT5h8dG",
-        "outputId": "bed8e4b5-9f3c-4dd7-916f-fc0dae179ce4"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{1: ([41, 48, 83, 86, 17], [83, 86, 6, 31, 17, 9, 48, 53]),\n",
-            " 2: ([13, 32, 20, 16, 61], [61, 30, 68, 82, 17, 32, 24, 19]),\n",
-            " 3: ([1, 21, 53, 59, 44], [69, 82, 63, 72, 16, 21, 14, 1]),\n",
-            " 4: ([41, 92, 73, 84, 69], [59, 84, 76, 51, 58, 5, 54, 83]),\n",
-            " 5: ([87, 83, 26, 28, 32], [88, 30, 70, 12, 93, 22, 82, 36]),\n",
-            " 6: ([31, 18, 13, 56, 72], [74, 77, 10, 23, 35, 67, 36, 11])}\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RSnUGyNrjgZA",
+        "outputId": "dada98fb-3417-4fe6-b3da-1736dfde92a2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "13\n",
+            "24160\n"
+          ]
+        }
+      ],
       "source": [
         "def part1(data):\n",
         "    ret = 0\n",
@@ -306,28 +310,28 @@
         "\n",
         "print(part1(parser(readme_input)))\n",
         "print(part1(parser(_input)))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RSnUGyNrjgZA",
-        "outputId": "dada98fb-3417-4fe6-b3da-1736dfde92a2"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "13\n",
-            "24160\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d0h_J5_tkpFW",
+        "outputId": "4c6caa59-bd79-458a-abef-1e4b965857d1"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "30\n",
+            "5659035\n"
+          ]
+        }
+      ],
       "source": [
         "def part2(data):\n",
         "    mult = {}\n",
@@ -346,25 +350,30 @@
         "\n",
         "print(part2(parser(readme_input)))\n",
         "print(part2(parser(_input)))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d0h_J5_tkpFW",
-        "outputId": "4c6caa59-bd79-458a-abef-1e4b965857d1"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n",
-            "5659035\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
