--- a/y2023/y2023ex06.ipynb
+++ b/y2023/y2023ex06.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 27,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "M0SjGiF-imbZ"
       },
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vWaCTT5h8dG",
-        "outputId": "0b546672-17eb-4c7b-ede0-cd43fa7d78be"
+        "outputId": "521dc3b1-c75a-44b7-f035-62c72d3a4952"
       },
-      "execution_count": 4,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSnUGyNrjgZA",
-        "outputId": "f6f67488-eca8-4ba1-c093-16cc5c9d1251"
+        "outputId": "8d859928-6453-4414-9618-06f8053187a0"
       },
-      "execution_count": 7,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,6 +108,61 @@
           "text": [
             "288\n",
             "114400\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numba import njit\n",
+        "\n",
+        "@njit\n",
+        "def nint(s):\n",
+        "    ret = 0\n",
+        "    for c in s:\n",
+        "        ret *= 10\n",
+        "        ret += ord(c) - 48\n",
+        "    return ret\n",
+        "\n",
+        "\n",
+        "@njit\n",
+        "def part2(s):\n",
+        "    for line in s.splitlines():\n",
+        "        if line.startswith('Time'):\n",
+        "            time = line.split()\n",
+        "            time=nint(''.join(time[1::]))\n",
+        "        elif line.startswith('Distance'):\n",
+        "            distance = line.split()\n",
+        "            distance=nint(''.join(distance[1::]))\n",
+        "    acc = 0\n",
+        "    for press in range(time):\n",
+        "        dist = press*(time-press)\n",
+        "        if dist>distance:\n",
+        "            acc+=1\n",
+        "\n",
+        "    return acc\n",
+        "\n",
+        "print(part2(readme_input))\n",
+        "print(part2(_input))\n",
+        "%timeit -n 10 part2(_input)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d0h_J5_tkpFW",
+        "outputId": "e3c01223-49ce-4d68-f2c5-e7cb57dff22e"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "71503\n",
+            "21039729\n",
+            "12.2 ms ± 325 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
           ]
         }
       ]
@@ -133,23 +188,25 @@
         "    return acc\n",
         "\n",
         "print(part2(readme_input))\n",
-        "print(part2(_input))"
+        "print(part2(_input))\n",
+        "%timeit -n 4 -r 4 part2(_input)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "d0h_J5_tkpFW",
-        "outputId": "3e81fe43-c919-45d8-c1b5-28280d5cbc8c"
+        "outputId": "f583f866-d993-4cb6-ec05-a3855de69fbd",
+        "id": "oyOxlmX1wCCa"
       },
-      "execution_count": 10,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "71503\n",
-            "21039729\n"
+            "21039729\n",
+            "3.21 s ± 14.6 ms per loop (mean ± std. dev. of 4 runs, 4 loops each)\n"
           ]
         }
       ]
