--- a/y2023/y2023ex07.ipynb
+++ b/y2023/y2023ex07.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 57,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -1040,7 +1040,7 @@
         "id": "M0SjGiF-imbZ",
         "cellView": "form"
       },
-      "execution_count": 53,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1063,9 +1063,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vWaCTT5h8dG",
-        "outputId": "efda3c63-0d6a-4af2-d0d6-555a1965a667"
+        "outputId": "2446be52-0cb1-437c-f6fb-42a447068036"
       },
-      "execution_count": 54,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1114,7 @@
         "            raise Exception(\"???\")\n",
         "\n",
         "    hands2.sort()\n",
-        "    for i, (a, b, bid) in enumerate(hands2, start=1):\n",
+        "    for i, (_, _, bid) in enumerate(hands2, start=1):\n",
         "        ret += i * bid\n",
         "\n",
         "    return ret\n",
@@ -1130,9 +1130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSnUGyNrjgZA",
-        "outputId": "40802363-0247-4b3d-b7e6-256732a28299"
+        "outputId": "e6d7c223-b7f3-430a-c6c9-21ec50e30c4b"
       },
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
         "            raise Exception(\"???\")\n",
         "\n",
         "    hands2.sort()\n",
-        "    for i, (a, b, bid) in enumerate(hands2, start=1):\n",
+        "    for i, (_, _, bid) in enumerate(hands2, start=1):\n",
         "        ret += i * bid\n",
         "\n",
         "    return ret\n",
@@ -1204,9 +1204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0h_J5_tkpFW",
-        "outputId": "30432b98-c0dc-4747-9167-71adf3ca23c3"
+        "outputId": "1f862d20-5f0b-491b-e42d-3d771a6e2470"
       },
-      "execution_count": 56,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
