--- a/y2023/y2023ex07.ipynb
+++ b/y2023/y2023ex07.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 72,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -1040,7 +1040,7 @@
         "id": "M0SjGiF-imbZ",
         "cellView": "form"
       },
-      "execution_count": 58,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -1063,9 +1063,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vWaCTT5h8dG",
-        "outputId": "2446be52-0cb1-437c-f6fb-42a447068036"
+        "outputId": "2316851b-64d8-4437-d3c4-adcb6932851c"
       },
-      "execution_count": 59,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,8 +1088,8 @@
         "            (14,13,12,11,10,9, 8, 7, 6, 5, 4, 3, 2)\n",
         "        )\n",
         "    )\n",
-        "    ret = 0\n",
-        "    hands2 = []\n",
+        "\n",
+        "    mapped_hands = []\n",
         "    for hand, bid in hands:\n",
         "        count = defaultdict(int)\n",
         "        for c in hand:\n",
@@ -1097,24 +1097,26 @@
         "        mapped_hand = tuple(cards_map[x] for x in hand)\n",
         "        count_values = list(count.values())\n",
         "        if 5 in count_values:\n",
-        "            hands2.append((7, mapped_hand, bid))\n",
+        "            mapped_hands.append((7, mapped_hand, bid))\n",
         "        elif 4 in count_values:\n",
-        "            hands2.append((6, mapped_hand, bid))\n",
+        "            mapped_hands.append((6, mapped_hand, bid))\n",
         "        elif 3 in count_values and 2 in count_values:\n",
-        "            hands2.append((5, mapped_hand, bid))\n",
+        "            mapped_hands.append((5, mapped_hand, bid))\n",
         "        elif 3 in count_values and 2 not in count_values:\n",
-        "            hands2.append((4, mapped_hand, bid))\n",
+        "            mapped_hands.append((4, mapped_hand, bid))\n",
         "        elif count_values.count(2)==2:\n",
-        "            hands2.append((3, mapped_hand, bid))\n",
+        "            mapped_hands.append((3, mapped_hand, bid))\n",
         "        elif count_values.count(2)==1 and len(count_values)==4:\n",
-        "            hands2.append((2, mapped_hand, bid))\n",
+        "            mapped_hands.append((2, mapped_hand, bid))\n",
         "        elif len(count_values)==5:\n",
-        "            hands2.append((1, mapped_hand, bid))\n",
+        "            mapped_hands.append((1, mapped_hand, bid))\n",
         "        else:\n",
         "            raise Exception(\"???\")\n",
         "\n",
-        "    hands2.sort()\n",
-        "    for i, (_, _, bid) in enumerate(hands2, start=1):\n",
+        "    mapped_hands.sort()\n",
+        "\n",
+        "    ret = 0\n",
+        "    for i, (_, _, bid) in enumerate(mapped_hands, start=1):\n",
         "        ret += i * bid\n",
         "\n",
         "    return ret\n",
@@ -1130,9 +1132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSnUGyNrjgZA",
-        "outputId": "e6d7c223-b7f3-430a-c6c9-21ec50e30c4b"
+        "outputId": "8a28210e-d139-4fff-f639-3085761fc1bd"
       },
-      "execution_count": 60,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -1154,8 +1156,8 @@
         "            (14,13,12,1, 10,9, 8, 7, 6, 5, 4, 3, 2)\n",
         "        )\n",
         "    )\n",
-        "    ret = 0\n",
-        "    hands2 = []\n",
+        "\n",
+        "    mapped_hands = []\n",
         "    for hand, bid in hands:\n",
         "        count = defaultdict(int)\n",
         "        for c in hand:\n",
@@ -1174,27 +1176,25 @@
         "        mapped_hand = tuple(cards_map[x] for x in hand)\n",
         "        count_values = list(count.values())\n",
         "        if 5 in count_values:\n",
-        "            hands2.append((7, mapped_hand, bid))\n",
+        "            mapped_hands.append((7, mapped_hand, bid))\n",
         "        elif 4 in count_values:\n",
-        "            hands2.append((6, mapped_hand, bid))\n",
+        "            mapped_hands.append((6, mapped_hand, bid))\n",
         "        elif 3 in count_values and 2 in count_values:\n",
-        "            hands2.append((5, mapped_hand, bid))\n",
+        "            mapped_hands.append((5, mapped_hand, bid))\n",
         "        elif 3 in count_values and 2 not in count_values:\n",
-        "            hands2.append((4, mapped_hand, bid))\n",
+        "            mapped_hands.append((4, mapped_hand, bid))\n",
         "        elif count_values.count(2)==2:\n",
-        "            hands2.append((3, mapped_hand, bid))\n",
+        "            mapped_hands.append((3, mapped_hand, bid))\n",
         "        elif count_values.count(2)==1 and len(count_values)==4:\n",
-        "            hands2.append((2, mapped_hand, bid))\n",
+        "            mapped_hands.append((2, mapped_hand, bid))\n",
         "        elif len(count_values)==5:\n",
-        "            hands2.append((1, mapped_hand, bid))\n",
+        "            mapped_hands.append((1, mapped_hand, bid))\n",
         "        else:\n",
         "            raise Exception(\"???\")\n",
         "\n",
-        "    hands2.sort()\n",
-        "    for i, (_, _, bid) in enumerate(hands2, start=1):\n",
-        "        ret += i * bid\n",
+        "    mapped_hands.sort()\n",
         "\n",
-        "    return ret\n",
+        "    return sum(i * bid for i, (_, _, bid) in enumerate(mapped_hands, start=1))\n",
         "\n",
         "print(part2(parser(readme_input)))\n",
         "print(part2(parser(_input)))"
@@ -1204,9 +1204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0h_J5_tkpFW",
-        "outputId": "1f862d20-5f0b-491b-e42d-3d771a6e2470"
+        "outputId": "17605190-d83c-4980-a226-1e90b7daedfd"
       },
-      "execution_count": 61,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
