add y2023ex06 mathematical solution

--- a/y2023/y2023ex06.ipynb
+++ b/y2023/y2023ex06.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "M0SjGiF-imbZ"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vWaCTT5h8dG",
-        "outputId": "521dc3b1-c75a-44b7-f035-62c72d3a4952"
+        "outputId": "0b2b7728-5cfb-4a1a-fca2-628db2ee3b44"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSnUGyNrjgZA",
-        "outputId": "8d859928-6453-4414-9618-06f8053187a0"
+        "outputId": "e2219b86-4744-460b-f67c-5207a7793430"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0h_J5_tkpFW",
-        "outputId": "e3c01223-49ce-4d68-f2c5-e7cb57dff22e"
+        "outputId": "5a2af643-d26e-40b4-f621-55706f5ac8c9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
           "text": [
             "71503\n",
             "21039729\n",
-            "12.2 ms ± 325 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+            "17.7 ms ± 179 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
           ]
         }
       ]
@@ -189,16 +189,16 @@
         "\n",
         "print(part2(readme_input))\n",
         "print(part2(_input))\n",
-        "%timeit -n 4 -r 4 part2(_input)"
+        "%timeit -n 2 -r 2 part2(_input)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f583f866-d993-4cb6-ec05-a3855de69fbd",
+        "outputId": "f826b8ae-abd2-4e5b-810d-a6c8b384014f",
         "id": "oyOxlmX1wCCa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,51 @@
           "text": [
             "71503\n",
             "21039729\n",
-            "3.21 s ± 14.6 ms per loop (mean ± std. dev. of 4 runs, 4 loops each)\n"
+            "6.57 s ± 19.3 ms per loop (mean ± std. dev. of 2 runs, 2 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def part2(s):\n",
+        "    for line in s.splitlines():\n",
+        "        if line.startswith('Time'):\n",
+        "            _, time = line.split(maxsplit=1)\n",
+        "            time=int(time.replace(' ',''))\n",
+        "        elif line.startswith('Distance'):\n",
+        "            _, distance = line.split(maxsplit=1)\n",
+        "            distance=int(distance.replace(' ',''))\n",
+        "\n",
+        "    left = (time - (time**2-4*distance)**0.5)/2\n",
+        "    right = (time + (time**2-4*distance)**0.5)/2\n",
+        "\n",
+        "    left = int(left) + (1 if int(left)-left!=0 else 0)\n",
+        "    right = int(right)\n",
+        "\n",
+        "    return right-left+1\n",
+        "\n",
+        "print(part2(readme_input))\n",
+        "print(part2(_input))\n",
+        "%timeit -n 4 -r 4 part2(_input)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2yNaxX8OD3Yt",
+        "outputId": "4feb9bdb-f46a-473a-9495-c666101eee01"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "71503\n",
+            "21039729\n",
+            "9.88 µs ± 1.6 µs per loop (mean ± std. dev. of 4 runs, 4 loops each)\n"
           ]
         }
       ]
