refactor y2023ex09.ipynb

--- a/y2023/y2023ex09.ipynb
+++ b/y2023/y2023ex09.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -238,7 +238,7 @@
         "id": "M0SjGiF-imbZ",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -252,16 +252,25 @@
         "        values.append(list(map(int, line.split())))\n",
         "    return values\n",
         "\n",
-        "print(parser(readme_input))"
+        "print(parser(readme_input))\n",
+        "\n",
+        "def diffs(seq):\n",
+        "    ret = [seq]\n",
+        "    while not all(x==0 for x in ret[-1]):\n",
+        "        new = []\n",
+        "        for a,b in zip(ret[-1], ret[-1][1:]):\n",
+        "            new.append(b-a)\n",
+        "        ret.append(new)\n",
+        "    return ret"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vWaCTT5h8dG",
-        "outputId": "b32dfd53-a488-4bbc-a389-360973c0c2d4"
+        "outputId": "5e8a9690-92fd-4ba5-c7c4-729d1efe4d69"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,17 +284,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def next(seq):\n",
-        "    diffs = [seq]\n",
-        "    while not all(x==0 for x in diffs[-1]):\n",
-        "        new = []\n",
-        "        for a,b in zip(diffs[-1], diffs[-1][1:]):\n",
-        "            new.append(b-a)\n",
-        "        diffs.append(new)\n",
-        "    return sum(x[-1] for x in diffs)\n",
-        "\n",
         "def part1(data):\n",
-        "    return sum(next(x) for x in data)\n",
+        "    return sum(x[-1] for line in data for x in diffs(line))\n",
         "\n",
         "print(part1(parser(readme_input)))\n",
         "print(part1(parser(_input)))"
@@ -295,9 +295,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSnUGyNrjgZA",
-        "outputId": "f7a2c0c7-f35e-4910-ea01-18eb3ba613a5"
+        "outputId": "320f6d4f-6dd8-4c0e-eae3-a4bb2b300a34"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,18 +312,15 @@
     {
       "cell_type": "code",
       "source": [
-        "def next2(seq):\n",
-        "    diffs = [seq]\n",
-        "    while not all(x==0 for x in diffs[-1]):\n",
-        "        new = [b-a for a,b in zip(diffs[-1], diffs[-1][1:])]\n",
-        "        diffs.append(new)\n",
+        "def prev(seq):\n",
+        "    diffs_list = diffs(seq)\n",
         "    ret = 0\n",
-        "    for x in (x[0] for x in diffs[::-1]):\n",
+        "    for x in (x[0] for x in diffs_list[::-1]):\n",
         "        ret = x - ret\n",
         "    return ret\n",
         "\n",
         "def part2(data):\n",
-        "    return sum(next2(x) for x in data)\n",
+        "    return sum(prev(x) for x in data)\n",
         "\n",
         "print(part2(parser(readme_input)))\n",
         "print(part2(parser(_input)))"
@@ -333,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0h_J5_tkpFW",
-        "outputId": "57c97760-a874-4487-e9d9-257b48400b40"
+        "outputId": "18c8fd57-9939-456e-b02b-15f77896a2c1"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
