add y2023ex20 in python

--- a/y2023/y2023ex20.ipynb
+++ b/y2023/y2023ex20.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "s8-ySfUJnzMF"
       },
@@ -98,7 +98,7 @@
         "id": "M0SjGiF-imbZ",
         "cellView": "form"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "id": "5vWaCTT5h8dG",
         "outputId": "a7b05f28-3102-4686-ae15-ad750018692b"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "RSnUGyNrjgZA",
         "outputId": "7bc37b99-bad3-443b-8268-39ba01554b7d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "id": "d0h_J5_tkpFW",
         "outputId": "ac250ef3-216d-434b-88cd-de57d15a9093"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,6 +327,15 @@
           "execution_count": 63
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![y2023day20part2.png](https://kroki.io/mermaid/svg/eNpl1EtuxCAMANC9TzGr7HqFrnqEXmAYCogA5RMhxOkLMTbSdPfk8LMx0fkZzeP7C6J9fHx8PooBH27ZCIdRN7NmVse8EvNI274ye4fmcIBRUCp-D6RDOjjPm87AUfAEx9nBLrpEPE_w-ZbwpMMIKI1HLqoACjPomTQ_R8WbLuoKDleylnRvGXnkYrQjJ4HRsu0zM3dm0syYoWoqxdIsRcTNegKDB4wKLH6-LCRUPUFioZojzcmj2Fwo5bF84yCucDRKrs9i05AtB5XgxRbHXfZ-K0QQuGiUpDmn7UouKg8aT2U1adZM4kKlQS8cXAwGLjxHL6T52VfurhOn5wYBi_9ypDt7oTnPis1VNTRNt9A0Hzl3uoSeOLg4LskZnCOh77tXblcJmS00_N4CaY7MWFnZSTP42u2-qC0Ew3kWpAmkGaz4BlQjzd215ZUWZYUr8ROTjlYiziZdHM3A9nvEuCdiqaDWe3Gkue1IAi00e7w94siW2DJzvt7F0RR59_miEiDy71O-nuX6yTT7PeT_h8aP5z1U6h_x2DWj)"
+      ],
+      "metadata": {
+        "id": "I4IkpFycoPTE"
+      }
     }
   ]
 }
